WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29018
[Qt] Fix unused variable warnings
https://bugs.webkit.org/show_bug.cgi?id=29018
Summary
[Qt] Fix unused variable warnings
Laszlo Gombos
Reported
2009-09-07 13:02:54 PDT
The significance of this work is to make a step towards enforcing the same code quality measures as other WebKit ports (most notably the mac port) so that contributors focusing on a specific WebKit ports are less likely break other ports because of the difference in quality requirements. List of gcc warnings (with elevated warning level) - these warnings are not present in the port independent WebKit code: WebCore/history/qt/HistoryItemQt.cpp:48: warning: unused variable 'loadFormdata' WebCore/platform/graphics/qt/ImageBufferQt.cpp:241: warning: unused variable 'basex' WebCore/platform/qt/RenderThemeQt.cpp:575: warning: unused variable 'appearance' WebKit/qt/Api/qwebpage.cpp:829: warning: unused variable 'fontHeight' WebKit/qt/Api/qwebpage.cpp:817: warning: unused variable 'editor' WebKit/qt/WebCoreSupport/FrameLoaderClientQt.cpp:959: warning: unused variable 'page' WebKit/qt/WebCoreSupport/FrameLoaderClientQt.cpp:989: warning: unused variable 'loadType' WebKit/qt/WebCoreSupport/FrameLoaderClientQt.cpp:990: warning: unused variable 'childLoadType'
Attachments
proposed patch.
(5.08 KB, patch)
2009-09-07 13:15 PDT
,
Laszlo Gombos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Laszlo Gombos
Comment 1
2009-09-07 13:15:48 PDT
Created
attachment 39161
[details]
proposed patch. Removed dead code except in WebCore/history/qt/HistoryItemQt.cpp, where it made more sense to comment it out.
Simon Hausmann
Comment 2
2009-09-08 03:28:24 PDT
Comment on
attachment 39161
[details]
proposed patch. r=me
Eric Seidel (no email)
Comment 3
2009-09-08 10:37:18 PDT
Comment on
attachment 39161
[details]
proposed patch. Clearing flags on attachment: 39161 Committed
r48165
: <
http://trac.webkit.org/changeset/48165
>
Eric Seidel (no email)
Comment 4
2009-09-08 10:37:21 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug