2009-09-08  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Simon Hausmann.

        [Qt] Fix unused variable warnings
        https://bugs.webkit.org/show_bug.cgi?id=29018

        No functional change, no tests.

        * history/qt/HistoryItemQt.cpp:
        (WebCore::HistoryItem::restoreState):
        * platform/graphics/qt/ImageBufferQt.cpp:
        (WebCore::putImageData):
        * platform/qt/RenderThemeQt.cpp:
        (WebCore::RenderThemeQt::paintMenuList):
2009-09-08  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Fix unused variable warnings
        https://bugs.webkit.org/show_bug.cgi?id=29018

        * Api/qwebpage.cpp:
        (QWebPagePrivate::keyPressEvent):
        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::startDownload):
        (WebCore::FrameLoaderClientQt::createFrame):

Canonical link: https://commits.webkit.org/39734@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48165 268f45cc-cd09-0410-ab3c-d52691b4dbfc